[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/ptero.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/pterodactyl.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=2]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 92, 96 )

[sub_resource type="AtlasTexture" id=3]
flags = 9
atlas = ExtResource( 2 )
region = Rect2( 92, 0, 92, 96 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 24.75 )

[node name="pterodactyl" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="ptero_sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -36.5 )
frames = SubResource( 4 )
animation = "fly"
frame = 1
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.5, -36.5 )
shape = SubResource( 1 )
disabled = true

[node name="detect_area" type="Area2D" parent="."]
position = Vector2( 0, -36.5 )

[node name="collision" type="CollisionShape2D" parent="detect_area"]
position = Vector2( 0, 0.5 )
shape = SubResource( 1 )

[node name="visibility_notifer" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -36 )
scale = Vector2( 4.6, 2.5 )

[connection signal="body_entered" from="detect_area" to="." method="player_entered"]
[connection signal="screen_exited" from="visibility_notifer" to="." method="visibility_notifer_screen_exited"]
